[package]
name = "simple-canvas"
authors = ["Remi A. Godin"]
version = "0.1.0"
edition = "2021"
description = "A simple generic 2 dimensional canvas struct"
repository = "https://github.com/Remi-Godin/simple-canvas"
homepage = "https://github.com/Remi-Godin/simple-canvas"
license = "MIT"
readme = "README.md"
keywords = [
    "canvas",
    "pixel",
    "matrix",
    "simple"
]
categories = [
    "data-structures"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
